<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brianbystrom.hw09.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/emailET"
        android:hint="Email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/emailET"
        android:layout_alignRight="@+id/emailET"
        android:layout_alignEnd="@+id/emailET"
        android:layout_marginTop="12dp"
        android:id="@+id/passwordET"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:text="@string/signInBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/signInBTN"
        android:layout_below="@+id/passwordET"
        android:layout_alignLeft="@+id/passwordET"
        android:layout_alignStart="@+id/passwordET" />

    <Button
        android:text="@string/signUpBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/signInBTN"
        android:layout_alignRight="@+id/passwordET"
        android:layout_alignEnd="@+id/passwordET"
        android:id="@+id/signUpBTN" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_below="@+id/signInBTN"
        android:layout_marginTop="21dp"
        android:layout_alignLeft="@+id/signInBTN"
        android:layout_alignStart="@+id/signInBTN"
        android:layout_alignRight="@+id/signUpBTN"
        android:layout_alignEnd="@+id/signUpBTN" />

    <TextView
        android:text="@string/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/emailET"
        android:layout_alignEnd="@+id/emailET"
        android:layout_marginTop="18dp" />

</RelativeLayout>
