<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brianbystrom.hw09.EditProfileActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/fNameET"
        android:layout_alignRight="@+id/fNameET"
        android:layout_alignEnd="@+id/fNameET"
        android:id="@+id/lNameET"
        android:hint="Last Name" />

    <Button
        android:text="@string/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryWhite"
        android:id="@+id/saveBTN"
        android:layout_alignBaseline="@+id/cancelBTN"
        android:layout_alignBottom="@+id/cancelBTN"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/genderSP"
        android:entries="@array/gender"
        android:layout_height="50dp"
        android:layout_below="@+id/lNameET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/genderSP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/profileUrlET"
        android:hint="Profile Picture URL"
        android:layout_width="250dp" />

    <Button
        android:text="@string/cancelBTN"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryWhite"
        android:layout_height="wrap_content"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:id="@+id/cancelBTN"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@color/common_google_signin_btn_text_light_disabled"
        android:layout_below="@+id/genderSP"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/imageIV" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/fNameET"
        android:hint="First Name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:text="@string/editLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textStyle="normal|bold"
        android:textSize="18sp" />
</RelativeLayout>
